# flint

./: Cargo.toml  Readme.md
src/: cli.rs  error.rs  launchd_config.rs  lib.rs  main.rs  service_manager.rs
src/services/: mod.rs  service_homebrew.rs  service_log.rs  service_state.rs  service_user_agent.rs
tests/: main_test.rs  service_manager_test.rs
tests/services/: mod.rs  service_state_test.rs
